Création des fichiers du sous-programme et ajout d'idée

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(labo07)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(labo07 main.cpp)
+add_executable(labo07 main.cpp manipulationVecteur.h manipulationVecteur.cpp)
